# evi

./: .gitignore  Makefile  config.yaml  main.py  pyproject.toml  requirements.txt
data/: sample_history.json
docs/: CALCULATION_REPORT.md
evi_weights/: __init__.py  calculator.py  cli.py  config.py  data_provider.py  models.py  ticker_resolver.py
evi_weights/api/: __init__.py  app.py  dependencies.py  schemas.py
evi_weights/api/routers/: backtest.py  calculate.py  config_api.py  export.py  regions.py  runs.py  scenarios.py
evi_weights/db/: __init__.py  engine.py  migrations.py  models.py  repository.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  main.tsx
frontend/src/api/: types.ts
frontend/src/components/: BacktestTimeline.tsx  DataTable.tsx  ExportButton.tsx  Layout.tsx  ParameterForm.tsx  RegionHistoryChart.tsx  ScenarioComparisonChart.tsx  WeightsBarChart.tsx  WeightsPieChart.tsx
frontend/src/hooks/: useBacktest.ts  useCalculation.ts  useRegions.ts
frontend/src/pages/: BacktestPage.tsx  DashboardPage.tsx  DataTablePage.tsx  HistoryPage.tsx  ScenariosPage.tsx
tests/: test_api.py  test_calculator.py  test_config.py  test_data_provider.py  test_db.py  test_integration.py  test_math_properties.py  test_ticker_resolver.py
